// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/auth/reset-password should handle submit form 1`] = `
<styled(Component)>
  <styled(Component)>
    <styled(Component)>
      <img
        alt="Logo"
        src="https://static.wixstatic.com/media/c55a42_78b53de3385f4c32baacc030ddaad4b5~mv2_d_2000_1500_s_2.png/v1/fill/w_361,h_196,al_c,usm_0.66_1.00_0.01/c55a42_78b53de3385f4c32baacc030ddaad4b5~mv2_d_2000_1500_s_2.png"
      />
    </styled(Component)>
    <styled(Component)>
      <Field
        component={[Function]}
        errorFontSize={14}
        errorMargin="0 0 5px 0"
        label="Login Id:"
        labelFontSize={14}
        labelMargin="5px 0 5px 0"
        name="loginId"
        type="text"
        validate={[Function]}
        width={1}
      />
      <Field
        component={[Function]}
        errorFontSize={14}
        errorMargin="0 0 5px 0"
        label="Email:"
        labelFontSize={14}
        labelMargin="5px 0 5px 0"
        name="email"
        type="email"
        validate={[Function]}
        width={1}
      />
      <WithTheme(styled(Component))
        disabled={true}
        fontSize={16}
        my="10"
        p="8px 16px"
        type="submit"
      >
        Reset
      </WithTheme(styled(Component))>
      <styled(Link)
        to="login"
      >
        Login
      </styled(Link)>
    </styled(Component)>
  </styled(Component)>
</styled(Component)>
`;

exports[`features/auth/reset-password should render reset password form 1`] = `
<styled(Component)>
  <WithTheme(styled(Component))>
    <styled(Component)>
      <img
        alt="Logo"
        src="https://s3.amazonaws.com/amous-front-dev/logo/undefined-logo.svg"
      />
    </styled(Component)>
    <WithTheme(styled(Form))>
      <WithTheme(styled(Component))>
        Forgot your password?
      </WithTheme(styled(Component))>
      <WithTheme(styled(Component))>
        No problem. Enter your email here and we\`ll send you a link to reset it.
      </WithTheme(styled(Component))>
      <Field
        component={[Function]}
        errorFontSize={10}
        errorMargin="0 0 5px 0"
        margin="10px 0px 10px 0px"
        name="loginId"
        padding="0px 26px"
        placeholder="Username"
        type="text"
        validate={[Function]}
        width={1}
      />
      <Field
        component={[Function]}
        errorFontSize={10}
        errorMargin="0 0 5px 0"
        margin="10px 0px 10px 0px"
        name="email"
        padding="0px 26px"
        placeholder="Email"
        type="email"
        validate={[Function]}
        width={1}
      />
      <WithTheme(styled(styled(Component)))
        disabled={true}
        fontSize={18}
        my="10"
        type="submit"
        width={1}
      >
        RESET MY PASSWORD
      </WithTheme(styled(styled(Component)))>
    </WithTheme(styled(Form))>
  </WithTheme(styled(Component))>
</styled(Component)>
`;
